Tests/bad0.my
def print_it() :
   print 3 + true    // error: Line 3: Illegal types in expression operator + expects Integers
   return
fed
print_it()
do_it()		// error
print (5 and 2) * 3    // error
print print_it + 1    // error